--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <main>
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif" alt="pokemon" class="pokemon_image">
         <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
+        <h1 class="pokemon_data">
+            <span class="pokemon_number">6</span>
+            <span class="pokemon_name">charizard</span>
+        </h1>
+
     </main>
 </body>
 </html>
