feat: adicionando form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <span class="pokemon_number">6</span>
             <span class="pokemon_name">charizard</span>
         </h1>
-
+        <form class="form">
+            <input type="search" class="inpút_search" placeholder="Nome ou Número" required>
+        </form>
     </main>
 </body>
 </html>
