--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span class="pokemon_name">charizard</span>
         </h1>
         <form class="form">
-            <input type="search" class="inpút_search" placeholder="Nome ou Número" required>
+            <input type="search" class="input_search" placeholder="Nome ou Número" required>
         </form>
     </main>
 </body>
