--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <form class="form">
             <input type="search" class="input_search" placeholder="Nome ou Número" required>
         </form>
+        <div class="buttons">
+            <button class="button btn-prev">&lt; Anterior</button>
+            <button class="button btn-prev">Próximo &gt;</button>
+        </div>
     </main>
 </body>
 </html>
