--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
-    <link rel="icon" href="./favicons/pokeball.png">
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="icon" href="./favicons/pokeball.png">
+  <link rel="stylesheet" href="./css/style.css">
+
+  <script defer src="./js/script.js"></script>
+
+  <title>Pokédex</title>
 </head>
 <body>
-    <main>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/6.gif" alt="pokemon" class="pokemon_image">
-        <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
-        <h1 class="pokemon_data">
-            <span class="pokemon_number">6</span>
-            <span class="pokemon_name">charizard</span>
-        </h1>
-        <form class="form">
-            <input type="search" class="input_search" placeholder="Nome ou Número" required>
-        </form>
-        <div class="buttons">
-            <button class="button btn-prev">&lt; Anterior</button>
-            <button class="button btn-prev">Próximo &gt;</button>
-        </div>
-    </main>
+  
+  <main>
+    <img src="#" alt="pokemon" class="pokemon__image">
+
+    <h1 class="pokemon__data">
+      <span class="pokemon__number"></span> -
+      <span class="pokemon__name"></span>
+    </h1>
+
+    <form class="form">
+      <input
+        type="search"
+        class="input__search"
+        placeholder="Name or Number"
+        required
+      />
+    </form>
+
+    <div class="buttons">
+      <button class="button btn-prev">Prev &lt;</button>
+      <button class="button btn-next">Next &gt;</button>
+    </div>
+
+    <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
+  </main>
+
 </body>
 </html>
