--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
   
   <main>
-    <img src="#" alt="pokemon" class="pokemon__image">
+    <img src="#" alt="pokemon" class="pokemon_image">
 
-    <h1 class="pokemon__data">
-      <span class="pokemon__number"></span> -
-      <span class="pokemon__name"></span>
+    <h1 class="pokemon_data">
+      <span class="pokemon_number"></span> -
+      <span class="pokemon_name"></span>
     </h1>
 
     <form class="form">
       <input
         type="search"
-        class="input__search"
+        class="input_search"
         placeholder="Name or Number"
         required
       />
