--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <input
         type="search"
         class="input_search"
-        placeholder="Name or Number"
+        placeholder="Nome ou Número"
         required
       />
     </form>
 
     <div class="buttons">
-      <button class="button btn-prev">Prev &lt;</button>
-      <button class="button btn-next">Next &gt;</button>
+      <button class="button btn-prev">&lt; Anterior</button>
+      <button class="button btn-next">Proximo &gt;</button>
     </div>
 
     <img src="./images/pokedex.png" alt="pokedex" class="pokedex">
